--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
   "name": "auto-fold",
+  "version": "0.0.0",
   "displayName": "auto-fold",
+  "main": "./dist/index.js",
   "description": "",
-  "version": "0.0.1",
   "engines": {
     "vscode": "^1.99.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./dist/extension.js",
+  "activationEvents": [
+    "onLanguage"
+  ],
   "contributes": {
-    "commands": [
-      {
-        "command": "auto-fold.helloWorld",
-        "title": "Hello World"
+    "configuration": {
+      "title": "Auto Fold",
+      "properties": {
+        "auto-fold.fold/unfold-imports-when-focus/blur": {
+          "type": "boolean",
+          "default": true,
+          "description": "When import section is focused, unfold all imports. When import section is blurred, fold all imports."
+        },
+        "auto-fold.enable-str-search-imports-for-js": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable string search for imports in JavaScript files. This is not the default behavior of VSCode. But the default behavior of vscode sometime does not work. So this is enabled by default."
+        }
       }
-    ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
@@ -34,16 +45,19 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.99.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.99.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
-    "eslint": "^9.23.0",
-    "esbuild": "^0.25.1",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.8.2",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.25.1",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
