--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-fold",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "icon": "public/icon.png",
   "publisher": "NazmusSayad",
   "displayName": "Auto Fold & Unfold Code",
@@ -18,6 +18,11 @@
     "configuration": {
       "title": "Auto Fold & Unfold Code",
       "properties": {
+        "auto-fold.enable-auto-fold-on-open": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable auto fold/unfold on open. This is not the default behavior of VSCode. But the default behavior of vscode sometime does not work. So this is enabled by default."
+        },
         "auto-fold.fold/unfold-imports-when-focus/blur": {
           "type": "boolean",
           "default": true,
